[Fixes #288] DeveloperExceptionPage needs better text spacing on OSX/Safari

--- a/src/Microsoft.AspNetCore.Diagnostics/DeveloperExceptionPage/Views/ErrorPage.css
+++ b/src/Microsoft.AspNetCore.Diagnostics/DeveloperExceptionPage/Views/ErrorPage.css
@@ -1,7 +1,6 @@
 ﻿body {
     font-family: 'Segoe UI', Tahoma, Arial, Helvetica, sans-serif;
     font-size: .813em;
-    line-height: 1.4em;
     color: #222;
 }
 
